--- a/css/style.css
+++ b/css/style.css
@@ -134,6 +134,24 @@
     margin-left: 125px;
 }
 
+.btn-edit {
+    color: black;
+    background-color: rgb(83, 81, 247);
+    border: 2px solid black;
+    margin-top: 20px;
+    max-width: 344px;
+    margin-left: 125px;
+}
+
+.btn-delete {
+    color: black;
+    background-color: rgb(223, 89, 89);
+    border: 2px solid black;
+    margin-top: 20px;
+    max-width: 344px;
+    margin-left: 125px;
+}
+
 .secRight {
     height: 500px;
     display: flex;
@@ -193,8 +211,8 @@
 
 .form input {
     width: 100%;
-    margin-top: 30px;
-    padding: 5px 10px;
+    margin-top: 10px;
+    padding: 5px 5px;
     font-size: 15px;
     border: 3px black;
     border-radius: 7px;
@@ -213,6 +231,50 @@
     background-color: white;
     height: 2px;
     margin: 5px 3px;
+}
+
+.table-back {
+    background-color: rgb(198, 248, 248);
+}
+
+.styled-table {
+    border-collapse: collapse;
+    margin: auto;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    font-size: 0.9em;
+    font-family: sans-serif;
+    min-width: 400px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+    background-color: rgb(198, 248, 248);
+}
+
+.styled-table thead tr {
+    background-color: black;
+    color: #ffffff;
+    text-align: left;
+}
+
+.styled-table th,
+.styled-table td {
+    padding: 12px 15px;
+}
+
+.styled-table tbody tr {
+    border-bottom: 1px solid #dddddd;
+}
+
+.styled-table tbody tr:nth-of-type(even) {
+    background-color: #f3f3f3;
+}
+
+.styled-table tbody tr:last-of-type {
+    border-bottom: 2px solid #009879;
+}
+
+.styled-table tbody tr.active-row {
+    font-weight: bold;
+    color: #009879;
 }
 
 @media only screen and (max-width:1140px) {
